# lion-tools

./: .gitignore  README.md  analyze_row2.py  pyproject.toml  requirements.txt
datasets/: movies.parquet  readme.txt
lion_tools/: Cockpit.py  CockpitLogging.py  DataFrameDisplay.py  DataFrameExcel.py  DataFrameExtensions.py  DataFrameGroup.py  DataFrameOther.py  DataFrameSummarize.py  DataFrameSummary.py  DataFrameTap.py  Tools.py  __init__.py  dataframe_extensions.py  get_or_create_spark.py  settings.py
lion_tools/src/: Cockpit.py  CockpitLogging.py  DataFrameDisplay.py  DataFrameExcel.py  DataFrameExtensions.py  DataFrameGroup.py  DataFrameSummarize.py  DataFrameTap.py  __init__.py  get_or_create_spark.py  settings.py  start_spark.py
lion_tools/templates/: cockpit_template.html  dataframe_error_template.html  dataframe_excel_examples.html  dataframe_view_template backup.html  dataframe_view_template.html  download_file_template.html  log_template.html  message_bar_template.html  (+3 more)
notebooks/: cockpit_layout.ipynb  dataframe_display_examples.ipynb  download_datasets.ipynb  example_cockpit.ipynb  example_dataframe_colors.ipynb  example_dataframe_display.ipynb  example_dataframe_display_cockpit.ipynb  example_dataframe_display_external.ipynb  example_dataframe_display_in_cockpit.ipynb  example_dataframe_grouping.ipynb  example_summary.ipynb  example_to_excel.ipynb  initialize.ipynb
templates/: log_template.html
tests/: conftest.py  test_cockpit_logging.py  test_colors.py  test_group.py  test_other.py  test_sort.py  test_summarize.py  test_summary.py  test_tap.py
(+6 files in other folders)
